--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ h6 {
 }
 .full-screen-title {
   display: block;
-  width: 100%;
+  width: auto;
   font-size: var(--fz-header-title);
   line-height: var(--lh-header-title);
   color: var(--cl-txt-header-title);
