--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -17,3 +17,13 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "Jost";
+  src:
+    url("../../fonts/Jost-Italic.woff2") format("woff2"),
+    url("../../fonts/Jost-Italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
